[package]
name = "chez-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "kernel"
path = "src/lib.rs"

[[bin]]
name = "scheme"
path = "src/main.rs"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
libz-sys = "^1.1"
lz4-sys = "^1.11"

[build-dependencies]
cc = { version = "^1.2", features = ["parallel"] }
